--- a/package.json
+++ b/package.json
@@ -9,12 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "@splinetool/react-spline": "2.2.0",
+    "@splinetool/runtime": "0.9.40",
+    "framer-motion": "^6.3.3",
+    "gsap": "^3.9.1",
+    "next": "12.0.7",
+    "next-transpile-modules": "^9.0.0",
+    "phosphor-react": "^1.4.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-sizeme": "^3.0.2",
+    "react-spline": "^1.2.1",
+    "sass": "^1.51.0"
   },
   "devDependencies": {
-    "eslint": "8.15.0",
-    "eslint-config-next": "12.1.6"
+    "@babel/core": "^7.16.7",
+    "@babel/plugin-proposal-optional-chaining": "^7.16.7",
+    "@types/node": "17.0.7",
+    "@types/react": "^17.0.38",
+    "@types/styled-system": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "babel-plugin-styled-components": "^2.0.2",
+    "eslint": "8.6.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.5",
+    "postcss": "^8.4.13",
+    "prettier": "^2.4.1",
+    "typescript": "^4.5.4"
   }
 }
